--- a/cardio-ios/Base.lproj/Main.storyboard
+++ b/cardio-ios/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -25,8 +26,11 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DKs-bF-jti">
-                                <rect key="frame" x="0.0" y="110" width="600" height="490"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="DKs-bF-jti" secondAttribute="height" multiplier="1:1" id="Ij0-wh-ipJ"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -35,7 +39,6 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="DKs-bF-jti" secondAttribute="bottom" id="9QC-f8-akY"/>
                             <constraint firstItem="Lt4-Pu-cb4" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="SUm-B4-hwx"/>
                             <constraint firstItem="DKs-bF-jti" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="fj0-SM-28g"/>
-                            <constraint firstItem="DKs-bF-jti" firstAttribute="top" secondItem="Lt4-Pu-cb4" secondAttribute="bottom" constant="30" id="glL-ib-pU2"/>
                             <constraint firstItem="Lt4-Pu-cb4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="j1g-tv-XoD"/>
                         </constraints>
                     </view>
